--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     }
   </style>
   <script src="p5.js"></script>
+  <script src="Brush.js"></script>
   <script src="sketch.js"></script>
 </head>
 
